--- a/templates/article/lister.html.twig
+++ b/templates/article/lister.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
 <h1>Liste des Produits</h1>
 
-<table class"table-bordered">
-<tr class="table-dark">
+<table class="table table-bordered">
+<tr class="table-info">
 <th>Identifiant</th>
 <th>Libellé</th>
 <th>Quantité</th>
